Implement call to /user/envelope/<id>/schedule
